--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
 [dependencies]
 rusty-bridge-lib = { path = "./vts" }
 clap = { version = "4.5.16", features = ["derive"] }
-evalexpr = "11.3.0"
+evalexpr = {version = "11.3.0", features = ["rand"]}
 log = "0.4.22"
 log4rs = "1.3.0"
 serde = { version = "1.0.197", features = ["derive"] }
